--- a/index.html
+++ b/index.html
@@ -614,9 +614,9 @@
         <div class="location__map-main"></div>
         <div class="location__map-color"></div>
         <div class="location__map-title">Kinky Rouge</div>
-        <a href="https://yandex.ru/maps/-/CDFPYD9d" class="location__map-link"></a>
+        <a href="https://yandex.ru/maps/org/kinky_rouge/97318121192" class="location__map-link"></a>
       </div>
-      <a href="https://yandex.ru/maps/-/CDFPYD9d" class="location__address">ул. Малая Якиманка 24, "Kinky Rouge"</a>
+      <a href="https://yandex.ru/maps/org/kinky_rouge/97318121192" class="location__address">ул. Малая Якиманка 24, "Kinky Rouge"</a>
     </div>
     <div class="tickets">
       <h2 class="tickets__title">KINKY ROUGE</h2>
