--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         let preloader = document.getElementById('preloader');
         preloader.classList.add('hide-preloader');
         document.body.style.opacity = 1;
+        document.body.style.pointerEvents = all;
         setInterval(function() {
               preloader.classList.add('preloader-hidden');
         }, 990);
@@ -69,7 +70,7 @@
   </style>
 </head>
 <!-- 009589 -->
-<body style="--c-1: #0f1221; --c-2: #20123c; --c-3: #5D3587; --c-4: #A367B1; --c-5: #FFD1E3;" style="opacity: 0;">
+<body style="--c-1: #0f1221; --c-2: #20123c; --c-3: #5D3587; --c-4: #A367B1; --c-5: #FFD1E3;" style="opacity: 0; pointer-events: ">
   <div id='preloader'>
     <img src="img/leaf-logo.png" alt="preloader" style="widows: 7rem; height: 7rem; animation: preloaderAnimation 3s ease-in-out infinite alternate;">
   </div>
