--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         let preloader = document.getElementById('preloader');
         preloader.classList.add('hide-preloader');
         document.body.style.opacity = 1;
-        document.body.style.pointerEvents = all;
+        document.body.style.pointerEvents = '';
         setInterval(function() {
               preloader.classList.add('preloader-hidden');
         }, 990);
