--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       align-items: center;
       justify-content: center;
       background: #ffffff;
+      pointer-events: none;
     }
     #preloader.hide-preloader {
         animation: hidePreloader 1s linear forwards;
